<resources>
    <string name="app_name">MovieTime</string>
    <string name="detail_title_label">Title:</string>
    <string name="detail_releaseDate_label">Release date:</string>
    <string name="detail_description_label">Plot:</string>
    <string name="detail_rating_label">Rating:</string>
    <string name="Movie_picture_description">Image</string>
    <string name="detail_error_message">Movie data not available!</string>
    <string name="JSONresults">results</string>
    <string name="JSONname">title</string>
    <string name="JSONrealDate">release_date</string>
    <string name="JSONimSource">backdrop_path</string>
    <string name="JSONvote">vote_average</string>
    <string name="JSONplot">overview</string>
    <string name="APIkey">put your key here</string>
</resources>